k8s/service.yaml
apiVersion: v1
# serive rsourece
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-service
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
